# Qubit-Pro

./: .gitignore  AI-Next-Steps.md  BRIDGE_FIX.md  DOCUMENTATION_PAGE_BRIEF.md  GITHUB_PROJECT.md  LAYOUT_IMPLEMENTATION_SUMMARY.md  LAYOUT_VERIFICATION_REPORT.md  Next Steps.md  Plan_Tuesday_B_TEAM.md  QUICK_START_LAYOUT.md  README.md  auto-layout.md  combined_edits.css  combined_edits.tsx  diff.txt  docker-compose.yml  docker-compose.yml.save  package-lock.json
.github/: CODEOWNERS
backend/physics_analysis/: Makefile  README.md  pyproject.toml
backend/physics_analysis/docker/: Dockerfile  docker-compose.yml
backend/physics_analysis/examples/: run_analysis.py  sample_design_spec.json  sample_em_results.json
backend/physics_analysis/output/: physics_report.json
backend/physics_analysis/src/physics_engine/: __init__.py  config.py  pipeline.py
backend/physics_analysis/src/physics_engine/api/: __init__.py  app.py  dependencies.py  routes.py
backend/physics_analysis/src/physics_engine/core/: __init__.py  multi_qubit.py  noise_analyzer.py  parameter_converter.py  parameter_sweep.py  readout_analyzer.py  single_qubit.py
backend/physics_analysis/src/physics_engine/models/: __init__.py  design_spec.py  em_results.py  enums.py  physics_report.py
backend/physics_analysis/src/physics_engine/report/: report_generator.py
backend/physics_analysis/tests/: conftest.py  test_api.py  test_models.py  test_multi_qubit.py  test_noise_analyzer.py  test_parameter_converter.py  test_pipeline.py  test_readout_analyzer.py  test_single_qubit.py  test_validators.py
(+1003 files in other folders)
