[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "silicofeller-physics-engine"
version = "0.1.0"
description = "Scqubits-based physics analysis engine for Silicofeller Quantum Studio"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [
    {name = "Silicofeller Team"},
]

dependencies = [
    "scqubits>=3.1.0",
    "qutip>=4.7.1",
    "numpy>=1.24",
    "scipy>=1.10",
    "pydantic>=2.0",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.22",
    "matplotlib>=3.7",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "httpx>=0.24",
    "ruff>=0.1",
    "mypy>=1.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/physics_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
src = ["src", "tests"]
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true
